# wikitext_simplified

./: Cargo.toml  LICENSE  README.md  build-frontend.py
.github/workflows/: deploy-frontend.yml  rust.yml
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  HtmlPreview.tsx  TreeView.tsx  examples.ts  types.ts
wikitext-wasm/: Cargo.toml
wikitext-wasm/src/: lib.rs
wikitext_simplified/: Cargo.toml
wikitext_simplified/src/: lib.rs  simplification.rs  tests.rs
wikitext_simplified_template_eval/: Cargo.toml
wikitext_simplified_template_eval/src/: lib.rs  tests.rs
wikitext_util/: Cargo.toml
wikitext_util/src/: lib.rs
