[workspace]
members = [".", "wikitext_simplified", "wikitext_util", "wikitext-wasm", "wikitext_simplified_template_eval"]
resolver = "2"

[workspace.dependencies]
parse-wiki-text-2 = { git = "https://github.com/philpax/parse-wiki-text-2.git", branch = "wasm-support" }
serde = { version = "1.0", features = ["derive"] }
