[package]
name = "wikitext-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wikitext_simplified = { path = "../wikitext_simplified", features = ["wasm"] }
wikitext_util = { path = "../wikitext_util" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "z"
lto = true
